# kuka_youbot

./: README.md
youbot_common/: .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
youbot_common/debian/: postinst
youbot_common/include/: YouBotConfiguration.h  YouBotOODLWrapper.h
youbot_common/include/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h
youbot_common/launch/: youbot_joint_state_publisher.launch  youbot_wrapper.launch
youbot_common/msg/: PowerBoardState.msg
youbot_common/src/: YouBotConfiguration.cpp  YouBotOODLWrapper.cpp  joint_state_observer.cpp  youbot_wrapper.cpp
youbot_common/src/cmd_vel_safety/: CmdVelSafety.cpp
youbot_common/src/examples/: youbot_2nd_arm_test.cpp  youbot_arm_test.cpp
youbot_common/src/youbot_network_estopper/: HeartbeatGenerator.cpp  YoubotNetworkEstopper.cpp
youbot_common/src/youbot_trajectory_action_server/: joint_trajectory_action.cpp
youbot_description/: CMakeLists.txt  README.md  Readme.md  controller_plugins.xml  package.xml
youbot_description/controller/: arm_joint_universal_control.yaml  gripper_joint_position_control.yaml
youbot_description/gazebo/: gazebo.urdf.xacro
youbot_description/include/: joint_position_control.h  joint_position_control__OLD__.h  youbot_universal_control.h
youbot_description/launch/: youbot_description.launch  youbot_moveit_controllers.launch  youbot_publisher.launch
youbot_description/launch/control/: youbot_control.launch
youbot_description/launch/scenarios/: multi_youbot_publisher.launch
youbot_description/meshes/sensors/: kinect.dae
youbot_description/meshes/youbot_arm/: arm1.dae  arm2.dae  arm3.dae  arm4.dae  arm5.dae
youbot_description/meshes/youbot_base/: back-right_wheel.dae  front-right_wheel.dae
youbot_description/robots/: youbot.urdf  youbot.urdf.xacro
youbot_description/src/: cartesian_compliance_control.cpp  joint_position_control.cpp  youbot_controller_manager.cpp  youbot_universal_control.cpp
youbot_description/tests/: youbot_arm.urdf  youbot_base.urdf  youbot_gripper.urdf
youbot_description/urdf/sensors/: asus_xtion_camera.gazebo.xacro  asus_xtion_camera.urdf.xacro
youbot_description/urdf/youbot_arm/: arm.gazebo.xacro  arm.urdf.xacro  arm.urdf.xacro.save  arm.urdf.xacro.save.1  limits.urdf.xacro
youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.urdf.xacro  base.urdf__OLD__.xacro
youbot_description/urdf/youbot_gripper/: gripper.urdf.xacro  gripper.urdf.xacro.save
youbot_description/urdf/youbot_plate/: plate.urdf.xacro  plate.urdf__OLD__.xacro
youbot_driver/: .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml
youbot_driver/config/: youbot-base.cfg  youbot-manipulator-dual-arm.cfg  youbot-manipulator.cfg
youbot_driver/debian/: postinst  postrm
youbot_driver/doc/: architecture_overview.dox  configuration.dox  mainpage.dox  soem.dox  statemachine.dox  troubleshooting.dox  usage.dox
youbot_driver/ld/: README.md  groovy.conf
youbot_driver/src/base-kinematic/: FourSwedishWheelOmniBaseKinematic.cpp  FourSwedishWheelOmniBaseKinematicConfiguration.cpp  WheeledBaseKinematic.cpp
youbot_driver/src/display/: CMakeLists.txt  DisplayIpAddress.cpp
youbot_driver/src/generic/: ConfigFile.cpp  Logger.cpp  PidController.cpp
youbot_driver/src/generic-joint/: JointData.cpp  JointTrajectory.cpp
youbot_driver/src/soem/: CMakeLists.txt  ethercatbase.c  ethercatcoe.c  ethercatconfig.c  ethercatdc.c  ethercatfoe.c  ethercatmain.c  ethercatprint.c  ethercatsoe.c  nicdrv.c
youbot_driver/src/testing/: CMakeLists.txt  TestSuite.cpp  YouBotArmTest.cpp  YouBotArmTestWithoutThread.cpp  YouBotBaseKinematicsTest.cpp  YouBotBaseTest.cpp  YouBotBaseTestWithoutThread.cpp  YouBotGripperTest.cpp
youbot_driver/src/youbot/: DataTrace.cpp  EthercatMaster.cpp  EthercatMasterWithThread.cpp  EthercatMasterWithoutThread.cpp  GripperDataTrace.cpp  JointLimitMonitor.cpp  JointTrajectoryController.cpp  YouBotBase.cpp  YouBotGripper.cpp  YouBotGripperBar.cpp  YouBotGripperParameter.cpp  YouBotJoint.cpp  YouBotJointParameter.cpp  YouBotJointParameterPasswordProtected.cpp  YouBotJointParameterReadOnly.cpp  YouBotManipulator.cpp
youbot_driver/udev_rules/: 47-hokuyo.rules
youbot_moveit_arm_kinematics/: CMakeLists.txt  README.md  package.xml  youbot_moveit_arm_kinematics.xml
youbot_moveit_arm_kinematics/src/: Kinematicshelper.cpp  Kinematicshelper.h  SolverInfoProcessor.cpp  SolverInfoProcessor.h  YoubotArmKinematicsPlugin.cpp  YoubotArmKinematicsPlugin.h  main.cpp
youbot_moveit_arm_kinematics/src/YoubotFK/: YoubotArmFK.h  YoubotArmKdlFK.cpp  YoubotArmKdlFK.h
youbot_moveit_arm_kinematics/src/YoubotIK/: YoubotArmAnalyticalIK.cpp  YoubotArmAnalyticalIK.h  YoubotArmIK.h  YoubotArmIKSolver.cpp  YoubotArmIKSolver.h
youbot_navigation/youbot_navigation_common/: CMakeLists.txt  mainpage.dox  package.xml
youbot_navigation/youbot_navigation_common/config/: costmap_common_params.yaml
youbot_navigation/youbot_navigation_common/launch/: bringup_navigation.launch  bringup_navigation_with_map.launch  slam.launch
youbot_navigation/youbot_navigation_global/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_global/launch/: amcl.launch
youbot_navigation/youbot_navigation_global/map/: command_center.pgm  default-map.yaml
youbot_navigation/youbot_navigation_local/: CMakeLists.txt  mainpage.dox  package.xml
youbot_srt/: CMakeLists.txt  (+1 more)
youbot_teleop/: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  package.xml
youbot_teleop/include/youbot_teleop/: youbot_joy_teleop.h
youbot_teleop/launch/: youbot_arm_teleop.launch  youbot_arm_teleop.launch~  youbot_joy_teleop.launch  youbot_joy_teleop.launch~  youbot_keyboard_teleop.launch  youbot_moveit_teleop.launch
youbot_teleop/scripts/: youbot_keyboard_teleop.py
youbot_teleop/src/: pick_and_place_demo.cpp  youbot_joy_teleop.cpp  youbot_moveit_teleop.cpp  youbot_moveit_to_pose.cpp  youbot_teleop_arm.cpp
(+94 files in other folders)
