<?xml version="1.0"?>
<package>
  <name>youbot_common</name>
  <version>0.1.3</version>
  <description>ROS Wrapper for the KUKA youBot Driver</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="blumenthal@locomotec.com">Sebastian Blumenthal</author>

  <license>LGPL 2.1 or BSD</license>

  <url type="website">http://ros.org/wiki/youbot_common</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/youbot_common/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/youbot_common</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>youbot_driver</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pr2_controller_manager</build_depend>

  <run_depend>brics_actuator</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>cppunit</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>youbot_driver</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libcap2-bin</run_depend>
</package>

